# hoopd

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
3rd/see-phit/: CMakeLists.txt
bench/: CMakeLists.txt  bench.cc
docs/: usage.md  whatfor.md
examples/echo/: CMakeLists.txt  client.py  main.cc  server.cc
examples/get_with_params/: CMakeLists.txt  client.py  server.cc
examples/helloworld/: CMakeLists.txt  client.py  main.cc  server.cc
examples/on_error/: CMakeLists.txt  client.py  server.cc
examples/post/: CMakeLists.txt  server.cc
src/: CMakeLists.txt  descriptable.h  dummy.cc  environment.cc  environment.h  hoopd.cc  hoopd.h  http.cc  main.cc  nocopyable.h  parser.cc  parser.h  service.cc  stream.cc  stream.h  sustain.cc  sustain.h
src/hoopd/: CMakeLists.txt  hoopd.cc  hoopd.h  http.h  nocopyable.h  request.h  response.h  service.h  settings.h
src/hoopd/dummy/: CMakeLists.txt  dummy.h
src/hoopd/dummy/impl/: dummy.cc
src/hoopd/impl/: handler.cc  hoopd.cc  http.cc  http_header.cc  http_parser.c  parser.cc  request.cc  response.cc  service.cc  stream.cc
src/hoopd/internal/: descriptable.h  handler.h  http_header.h  httpheader.h  parse.h  parser.h  service.h  stream.h
src/impl/: hoopd.cc  http.cc  parser.cc  service.cc  stream.cc
src/internal/: parser.h  stream.h
test/: CMakeLists.txt  DummyUnitTest.cc  dummy.cc  helloworld.cc
